@@ -111,8 +111,16 @@ may need to be increased, depending on the image you are booting.
 </para><para>
 
 If you used an <filename>hd-media</filename> image, you should now copy the ISO file of a
-&debian; ISO image (businesscard, netinst or full CD image; be sure to select
-one that fits) onto the stick. When you are done, unmount the USB memory
+&debian; ISO image<footnote>
+
+<para>
+You can use either a businesscard, a netinst or a full CD image (see
+<xref linkend="official-cdrom"/>). Be sure to select one that fits.
+Note that the <quote>netboot <filename>mini.iso</filename></quote> image is
+not usable for this purpose.
+</para>
+
+</footnote> onto the stick. When you are done, unmount the USB memory
 stick (<userinput>umount /mnt</userinput>).
 
 </para>
