@@ -8,6 +8,7 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   * Document that the text installer is selected by default.
   * Avoid referencing BRLTTY manual chapter precise numbers. Closes: #580508.
   * Make it clear that it's the ISO file which needs to be copied to the USB key.
+  * Update powerpc's copy of documentation for copying ISO file on USB keys.
 
   [ Joey Hess ]
   * Fix typo in example preseed. Closes: #612631
